--- a/data-organisation.html
+++ b/data-organisation.html
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 
 # Reproducible RDM workflows for tabular data
 ### Eirini Zormpa
-### 2022-04-28 <em>(Updated: 2022-03-29)</em>
+### 2022-04-28 <em>(Updated: 2022-03-31)</em>
 
 ---
 
@@ -24,9 +24,10 @@ class: center, middle, inverse, title-slide
 
 
 
+
 ## Hi, I'm Eirini 👋
 
-### 👩‍🎓 PhD at Max Planck Institute for Psycholinguistics
+### 👩‍🎓 PhD Candidate at Max Planck Institute for Psycholinguistics
 - worked with lots of tabular data with observations from experiments with human participants
 - got interested in open science and reproducibility
 
@@ -38,7 +39,7 @@ class: center, middle, inverse, title-slide
 ---
 
 ## Session outline
-- FAIR data &amp; reproducible workflows
+- Reproducibility &amp; FAIR data
 - Data organisation in spreadsheets
   - Good data entry practices
   - Formatting data tables in spreadsheets
@@ -47,11 +48,133 @@ class: center, middle, inverse, title-slide
 ---
 class: center, middle, inverse
 
-## FAIR data &amp; reproducible workflows
+## Reproducibility &amp; FAIR data
 
 ---
 
-## FAIR data
+## What is reproducibility?
+
+![](images/reproducible-matrix.jpg)&lt;!-- --&gt;
+
+&lt;!-- TODO: figure out how to get the parenthetical citation working--&gt;
+
+*Image from [The Turing Way: A Handbook for Reproducible Data Science](https://the-turing-way.netlify.app/reproducible-research/overview/overview-definitions)  (The Turing Way Community, 2021)*
+
+---
+
+## Why is reproducibility important?
+
+From an altruistic point of view, reproducibility is beneficial for the research community, and arguably society. 
+--
+In many cases, it is a minimum requirement for **verifying research**; when research can be verified, and by extension corrected, science is built on solid ground. 
+--
+Being able to reuse and build on available data and code saves time and resources, with the potential to speed up **innovation**. 
+
+--
+
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+
+But reproducibility can also be beneficial for individual researchers!
+
+---
+
+## Reproducibility: benefits for individual researchers
+
+&lt;!-- TODO: figure out how to get the parenthetical citation working--&gt;
+
+There aren't only altruistic reasons to work reproducibly; it can be good for your career too!
+
+Markowetz (2015)  notes **five selfish** reasons to work reproducibly.
+
+
+
+---
+
+## Reason 1: reproducibility helps to avoid disaster
+
+--
+
+
+
+![](images/nuijten-2016.png)&lt;!-- --&gt;
+
+--
+
+- **1 in 2** examined papers had inconsistencies in the reported *p*-values
+- **1 in 8** examined papers had inconsistencies large enough that they would affect the conclusions
+
+---
+
+## Reason 1: reproducibility helps to avoid disaster (cont'd)
+
+--
+
+
+
+![](images/ziemann-2016.png)&lt;!-- --&gt;
+
+--
+
+- **1 in 5** papers in genetics is thought to have an error because of the default settings in Microsoft Excel reading in gene names as dates
+- *To be continued...*
+
+---
+
+## Reason 2: reproducibility makes it easier to write papers
+
+- with literate programming it's easy to combine text and code
+  - meaning you can call your results into your document directly. No more copy-pasting = **no more-copy pasting errors** ✨
+  - if you collect more data or change your data cleaning, you just need to rerun the analyses and all results will update
+- working reproducibly often involves automation and/or good documentation, making it more likely **you'll actually know what you did** when it's time to write up 💃🏼
+
+---
+
+## Reason 3: reproducibility helps reviewers see it your way
+
+Sharing the underlying code and data makes it possible for the reviewers to:
+- understand exactly how you cleaned and analysed the data
+- try out different analyses themselves
+- spot mistakes in your code👀
+
+---
+
+## Reason 4: reproducibility enables continuity of your work
+
+Good documentation of the data and code means:
+- you'll be able to go to a project after a break (e.g., holidays, peer review)
+- it's easier for others to pick up a project (important in long-term projects)
+
+---
+
+## Reason 5: reproducibility helps to build your reputation
+
+Sharing and documenting your data and code well:
+- helps you build a reputation as an honest and careful researcher
+- if there is ever a problem with one of your papers you can show you did everything in good faith
+
+---
+
+## Conclusion
+
+Working reproducibly doesn't mean that there will definitely not be any mistakes in your work.
+But it does make it easier to figure out what went wrong and, by extension, to fix it.
+
+--
+
+Working reproducibly can also make the paper writing and reviewing process easier and more productive.
+
+--
+
+And it can help others build on your work and build your reputation.
+
+---
+
+## FAIR and open data and code
 
 ---
 
@@ -68,10 +191,6 @@ class: center, middle, inverse
 ---
 
 ## Reusable
-
----
-
-## Reproducibility
 
 ---
 class: center, middle, inverse
@@ -92,8 +211,8 @@ Microsoft Excel
 Libre Office
 
 ![](images/libre-office.png)&lt;!-- --&gt;
-
 ]
+
 ---
 
 ## Spreadsheets
@@ -187,7 +306,7 @@ The Portal Project Teaching Database
 
 ## Exercise
 
-🕟 **10 mins**
+🕢 **10 mins**
 
 - Download the messy data
 - Open up the data in a spreadsheet programme
@@ -198,7 +317,7 @@ The Portal Project Teaching Database
   - add a comment describing what confused or annoyed you the most
 - Check the screenshots and comments of the other participants and give them a +1 if you like their solution/comment
 
-<div class="countdown" id="timer_6242e20b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62458232" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -226,6 +345,26 @@ The Portal Project Teaching Database
 
 Enclose the data fields with double quotes and double check that the file you are exporting can be read in correctly.
 
+---
+
+## References
+
+Markowetz, F. (2015). _Five selfish reasons to work reproducibly_. Vol.
+16. 1 , p. 274. DOI:
+[10.1186/s13059-015-0850-7](https://doi.org/10.1186%2Fs13059-015-0850-7).
+
+Nuijten, M. B., C. H. J. Hartgerink, M. A. L. M. van Assen, et al.
+(2016). _The prevalence of statistical reporting errors in psychology
+(1985-2013)_. Vol. 48. 4 , pp. 1205-1226. DOI:
+[10.3758/s13428-015-0664-2](https://doi.org/10.3758%2Fs13428-015-0664-2).
+
+The Turing Way Community (2021). _The Turing Way: A handbook for
+reproducible, ethical and collaborative research_. Zenodo. DOI:
+[10.5281/zenodo.5671094](https://doi.org/10.5281%2Fzenodo.5671094).
+
+Ziemann, M., Y. Eren, and A. El-Osta (2016). _Gene name errors are
+widespread in the scientific literature_. Vol. 17. 1 , p. 177. DOI:
+[10.1186/s13059-016-1044-7](https://doi.org/10.1186%2Fs13059-016-1044-7).
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
