fixes small mistakes

--- a/data-organisation.html
+++ b/data-organisation.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 
 # Reproducible RDM workflows for tabular data
 ### Eirini Zormpa
-### 28 April 2022 <em>(Updated: 2022-04-13)</em>
+### 28 April 2022 <em>(Updated: 2022-04-14)</em>
 
 ---
 
@@ -63,7 +63,7 @@ class: center, middle, inverse
 
 &lt;!-- TODO: figure out how to get the parenthetical citation working--&gt;
 
-.footnote[Image from [The Turing Way: A Handbook for Reproducible Data Science](https://the-turing-way.netlify.app/reproducible-research/overview/overview-definitions)  (The Turing Way Community, 2021)]
+.footnote[Image from [The Turing Way: A Handbook for Reproducible Data Science](https://the-turing-way.netlify.app/reproducible-research/overview/overview-definitions)  (The Turing Way Community, 2021) used under a [CC-BY licence](https://creativecommons.org/licenses/by/4.0/).]
 
 ---
 
@@ -215,7 +215,7 @@ And it can help others build on your work and build your reputation.
 
 # FAIR and open data and code
 
-Looking at this matrix again, it becomes obvious that for reproducibility to be possible, it is necessary to be able to get a **copy of the data and code**.
+Looking at this matrix again, it's clear that for reproducibility to be possible, it is necessary to be able to get a **copy of the data and code**.
 
 &lt;!-- TODO: figure out how to get the parenthetical citation working--&gt;
 
@@ -1331,7 +1331,7 @@ So we need to structure our data in a way computers can understand.
   - add a comment with what confused or annoyed you the most
 - Look at the posts of the other participants and give them a +1 if you like their solution/comment
 
-<div class="countdown" id="timer_62571ffe" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6257d428" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
