--- a/data-organisation.html
+++ b/data-organisation.html
@@ -1331,7 +1331,7 @@ So we need to structure our data in a way computers can understand.
   - add a comment with what confused or annoyed you the most
 - Look at the posts of the other participants and give them a +1 if you like their solution/comment
 
-<div class="countdown" id="timer_6267ad5e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6267b218" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1343,14 +1343,6 @@ So we need to structure our data in a way computers can understand.
 - **Life expectancy**: open file formats are more suitable for long-terms preservation because they don't rely ona single software programme
 - **Publishing**: data repositories, journals and funding agencies may have requirements for open file formats
 - **Universal format**: interoperable format that produces the same results when it is imported by various software programmes, including plain text editors
-
-
----
-
-# Which open file format 🤔?
-
-- **Comma delimited**: comma-separated value files (.csv) are plain text files where the columns are separated by commas
-- **Tab delimited**: tab-separated value files (.tsv) are plain text files where the columns are separated by tabs (\t)
 
 ---
 
@@ -1382,6 +1374,7 @@ tab-separated value files (.tsv) are plain text files where the columns are sepa
 👎🏼 not very commonly used (at least not yet)
 
 ]
+
 ---
 
 # Exporting from Excel to .csv
